k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hivebox-app
  template:
    metadata:
      labels:
        app: hivebox-app
    spec:
      containers:
        - name: hivebox
          image: hivebox-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
